--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "grunt-contrib-watch": "~0.5.3",
     "grunt-contrib-uglify": "~0.2.7",
     "grunt-contrib-less": "~0.9.0",
-    "grunt-contrib-concat": "~0.3.0"
+    "grunt-contrib-concat": "~0.3.0",
+    "grunt-contrib-htmlmin": "~0.2.0"
   }
 }
